--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Install Android Tools
       run: |
+        yes | sdkmanager --licenses
         sudo apt-get update -y
         sudo apt-get install -y android-tools-adb android-tools-fastboot
 
